Finished Stretch, Add should work, will style tomorrow morning

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,13 +53,9 @@ body {
   width: 75%;
   margin: 1rem auto;
 }
-.save-button {
-  position: absolute;
-  top: 25px;
-  right: 25px;
+.button {
   border: 1px solid grey;
   padding: 5px 10px;
-  background-color: lightseagreen;
 }
 .save-button:hover {
   background-color: green;
